--- a/liberty.css
+++ b/liberty.css
@@ -83,7 +83,7 @@
 
 .main{
    
-    /* border: 2px solid green; */
+    border: 2px solid green;
     width: 82%;
     height: 100%;
 }
@@ -93,6 +93,10 @@
     justify-content: space-between;
     background-color: #464de4;
     height: 60px; 
+    top: 0;
+    right: 0;
+    left: 18%;
+    position: fixed;
 }
 .first-parent{
     /* border: 2px solid red; */
